--- a/index.html
+++ b/index.html
@@ -212,6 +212,44 @@
         </div>
     </section>
 
+    <!-- ================= MODAL: PUBLIC PROFILE (NEW) ================= -->
+    <div id="modal-public-profile" class="hidden fixed inset-0 z-[100] bg-black bg-opacity-50 flex items-end sm:items-center sm:justify-center backdrop-blur-sm transition-all">
+        <div class="bg-white w-full sm:max-w-md h-[85vh] sm:h-[700px] rounded-t-3xl sm:rounded-3xl p-0 flex flex-col shadow-2xl overflow-hidden">
+            <!-- Header -->
+            <div class="p-4 border-b border-gray-100 flex justify-between items-center bg-white z-10">
+                <h3 class="font-extrabold text-gray-800 text-lg">Profil Vecin</h3>
+                <button onclick="toggleModal('modal-public-profile', false)" class="bg-gray-100 p-2 rounded-full text-gray-500 hover:bg-gray-200">
+                    <span class="material-icons-round">close</span>
+                </button>
+            </div>
+            
+            <div class="flex-1 overflow-y-auto bg-white">
+                <!-- Profile Info -->
+                <div class="bg-brand-bg p-6 flex flex-col items-center border-b border-gray-100">
+                    <img id="public-prof-avatar" src="" class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-lg mb-4 bg-gray-200">
+                    <h2 id="public-prof-name" class="text-xl font-extrabold text-gray-900">Nume Utilizator</h2>
+                    <p class="text-sm text-gray-500">Membru al comunității</p>
+                    
+                    <!-- Optional: Action buttons -->
+                    <div id="public-prof-actions" class="mt-4 flex gap-2">
+                        <!-- Injected via JS -->
+                    </div>
+                </div>
+
+                <!-- User's Posts -->
+                <div class="p-4">
+                    <h3 class="font-bold text-gray-800 mb-4 flex items-center gap-2">
+                        <span class="material-icons-round text-brand-primary">list_alt</span>
+                        Anunțuri publicate
+                    </h3>
+                    <div id="public-prof-posts" class="flex flex-col gap-3">
+                        <div class="text-center py-4"><span class="material-icons-round animate-spin text-gray-300">refresh</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- ================= MODAL: NOTIFICATIONS ================= -->
     <div id="modal-notifications" class="hidden fixed inset-0 z-[90] bg-black bg-opacity-50 flex items-end sm:items-center sm:justify-center backdrop-blur-sm transition-all">
         <div class="bg-white w-full sm:max-w-md h-[70vh] rounded-t-3xl sm:rounded-3xl p-0 flex flex-col shadow-2xl overflow-hidden">
