--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
     </section>
 
-    <!-- ================= MODAL: PUBLIC PROFILE (NEW) ================= -->
+    <!-- ================= MODAL: PUBLIC PROFILE ================= -->
     <div id="modal-public-profile" class="hidden fixed inset-0 z-[100] bg-black bg-opacity-50 flex items-end sm:items-center sm:justify-center backdrop-blur-sm transition-all">
         <div class="bg-white w-full sm:max-w-md h-[85vh] sm:h-[700px] rounded-t-3xl sm:rounded-3xl p-0 flex flex-col shadow-2xl overflow-hidden">
             <!-- Header -->
@@ -312,8 +312,11 @@
                     </button>
                 </div>
 
+                <!-- Category Section -->
                 <div>
                     <label class="text-xs font-bold text-gray-400 uppercase mb-2 block">Categorie</label>
+                    
+                    <!-- SALE Categories -->
                     <div id="cats-sale" class="grid grid-cols-4 gap-2">
                         <label class="cursor-pointer">
                             <input type="radio" name="cat-sale" value="kids" class="peer hidden" checked>
@@ -345,6 +348,7 @@
                         </label>
                     </div>
 
+                    <!-- EVENT Categories (Hidden by default) -->
                     <div id="cats-event" class="hidden grid grid-cols-4 gap-2">
                         <label class="cursor-pointer">
                             <input type="radio" name="cat-event" value="workshop" class="peer hidden" checked>
@@ -399,6 +403,12 @@
                         </div>
                     </div>
                     
+                    <!-- NEW: Location Field -->
+                    <div>
+                        <label class="text-xs font-bold text-gray-400 uppercase mb-1 block">Locație (Adresă)</label>
+                        <input type="text" id="event-location" placeholder="ex. Parcul Corbeanca" class="w-full bg-gray-50 border border-gray-200 rounded-xl p-3 text-sm text-gray-800 focus:outline-none focus:border-brand-primary">
+                    </div>
+
                     <div>
                          <label class="text-xs font-bold text-gray-400 uppercase mb-2 block">Tip Acces</label>
                          <div class="flex items-center gap-4">
