--- a/index.html
+++ b/index.html
@@ -442,6 +442,18 @@
                     <p class="text-[10px] text-gray-400 mt-1">Obligatoriu pentru contact.</p>
                 </div>
 
+                <!-- Image Upload Section -->
+                <div>
+                    <label class="text-xs font-bold text-gray-400 uppercase mb-1 block">Imagine (Opțional)</label>
+                    <input type="file" id="post-image" accept="image/*" class="w-full bg-gray-50 border border-gray-200 rounded-xl p-2 text-sm text-gray-800 focus:outline-none focus:border-brand-primary">
+                    <div id="post-image-preview-container" class="hidden mt-2 relative">
+                        <img id="post-image-preview" src="" class="w-full h-40 object-cover rounded-xl border border-gray-200">
+                        <button type="button" onclick="clearCreateImage()" class="absolute top-2 right-2 bg-white p-1 rounded-full shadow-md text-red-500 flex items-center justify-center">
+                            <span class="material-icons-round text-sm">close</span>
+                        </button>
+                    </div>
+                </div>
+
                 <div>
                     <label class="text-xs font-bold text-gray-400 uppercase mb-1 block">Descriere</label>
                     <textarea id="post-desc" rows="3" required class="w-full bg-gray-50 border border-gray-200 rounded-xl p-3 text-sm text-gray-700 focus:outline-none focus:border-brand-primary"></textarea>
@@ -512,6 +524,18 @@
                     </div>
                 </div>
 
+                <!-- Image Upload Section -->
+                <div>
+                    <label class="text-xs font-bold text-gray-400 uppercase mb-1 block">Imagine (Opțional)</label>
+                    <input type="file" id="edit-post-image" accept="image/*" class="w-full bg-gray-50 border border-gray-200 rounded-xl p-2 text-sm text-gray-800 focus:outline-none focus:border-brand-primary">
+                    <div id="edit-image-preview-container" class="hidden mt-2 relative">
+                        <img id="edit-image-preview" src="" class="w-full h-40 object-cover rounded-xl border border-gray-200">
+                        <button type="button" onclick="clearEditImage()" class="absolute top-2 right-2 bg-white p-1 rounded-full shadow-md text-red-500 flex items-center justify-center">
+                            <span class="material-icons-round text-sm">close</span>
+                        </button>
+                    </div>
+                </div>
+
                 <div>
                     <label class="text-xs font-bold text-gray-400 uppercase mb-1 block">Descriere</label>
                     <textarea id="edit-desc" rows="3" required class="w-full bg-gray-50 border border-gray-200 rounded-xl p-3 text-sm text-gray-700 focus:outline-none focus:border-brand-primary"></textarea>
@@ -521,6 +545,29 @@
                     <button type="submit" id="btn-update-post" class="bg-blue-500 text-white py-3 rounded-xl font-bold shadow-lg hover:bg-blue-600">Actualizează</button>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <!-- ================= MODAL: POST DETAILS ================= -->
+    <div id="modal-post-details" class="hidden fixed inset-0 z-[70] bg-black bg-opacity-50 flex items-end sm:items-center sm:justify-center backdrop-blur-sm transition-all">
+        <div class="bg-white w-full sm:max-w-2xl max-h-[90vh] rounded-t-3xl sm:rounded-3xl p-0 flex flex-col shadow-2xl overflow-hidden">
+            <!-- Header -->
+            <div class="p-4 border-b border-gray-100 flex justify-between items-center bg-white z-10 sticky top-0">
+                <h3 class="font-extrabold text-gray-800 text-lg" id="post-detail-title">Detalii</h3>
+                <div class="flex gap-2">
+                    <button onclick="openCommentsFromDetail()" class="bg-gray-100 p-2 rounded-full text-gray-600 hover:bg-gray-200">
+                        <span class="material-icons-round">chat_bubble_outline</span>
+                    </button>
+                    <button onclick="toggleModal('modal-post-details', false)" class="bg-gray-100 p-2 rounded-full text-gray-500 hover:bg-gray-200">
+                        <span class="material-icons-round">close</span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Content -->
+            <div id="post-detail-content" class="flex-1 overflow-y-auto p-6">
+                <!-- Content will be populated dynamically -->
+            </div>
         </div>
     </div>
 
