feat: Implement UI/UX improvements

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <button type="submit" id="auth-btn" class="w-full bg-brand-primary text-white py-4 rounded-2xl font-bold text-lg shadow-lg hover:shadow-xl hover:bg-red-400 transition-all transform active:scale-95 mt-6 flex justify-center items-center gap-2">
+            <button type="submit" id="auth-btn" class="w-full bg-brand-primary text-white py-4 rounded-2xl font-bold text-lg shadow-lg hover:shadow-xl hover:bg-red-400 transition-all transform active:scale-95 mt-6 flex justify-center items-center gap-2 btn-shadow">
                 Intră în cont
                 <span class="material-icons-round">arrow_forward</span>
             </button>
@@ -460,7 +460,7 @@
                 </div>
 
                 <div class="pt-4">
-                    <button type="submit" id="btn-submit-post" class="w-full bg-brand-primary text-white py-3 rounded-xl font-bold text-lg shadow-lg hover:bg-red-400 transition-colors">Publică</button>
+                    <button type="submit" id="btn-submit-post" class="w-full bg-brand-primary text-white py-3 rounded-xl font-bold text-lg shadow-lg hover:bg-red-400 transition-colors btn-shadow">Publică</button>
                 </div>
             </form>
         </div>
