--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     
     <!-- Google Font: Nunito -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Firebase SDKs & App Logic -->
     <script type="module" src="app.js"></script>
@@ -22,13 +22,14 @@
             theme: {
                 extend: {
                     fontFamily: {
-                        sans: ['Nunito', 'sans-serif'],
+                        sans: ['Poppins', 'sans-serif'],
                     },
                     colors: {
                         brand: {
-                            primary: '#FF8C78',
-                            secondary: '#4FD1C5',
-                            bg: '#F7F8FA',
+                            primary: '#3B82F6', // Blue 500
+                            secondary: '#10B981', // Emerald 500
+                            accent: '#F59E0B', // Amber 500
+                            bg: '#F9FAFB', // Gray 50
                         }
                     },
                     keyframes: {
@@ -51,10 +52,10 @@
 <body class="bg-brand-bg text-gray-800 h-screen w-screen overflow-hidden flex flex-col">
 
     <!-- ================= VIEW: LOGIN ================= -->
-    <section id="screen-login" class="hidden flex-col h-full items-center justify-center p-6 bg-white z-50">
+    <section id="screen-login" class="hidden flex-col h-full items-center justify-center p-6 bg-brand-bg z-50">
         <div class="text-center mb-8">
-            <div class="w-20 h-20 bg-brand-primary rounded-3xl mx-auto flex items-center justify-center mb-4 shadow-lg transform rotate-3">
-                <span class="material-icons-round text-white text-4xl">handshake</span>
+            <div class="w-20 h-20 bg-brand-primary rounded-3xl mx-auto flex items-center justify-center mb-4 shadow-lg">
+                <span class="material-icons-round text-white text-4xl">groups</span>
             </div>
             <h1 id="auth-title" class="text-3xl font-extrabold text-gray-900 mb-2">Bine ai revenit!</h1>
             <p class="text-gray-500">Conectează-te pentru a interacționa cu vecinii.</p>
@@ -62,28 +63,28 @@
         <form id="login-form" class="w-full max-w-sm space-y-4">
             <div>
                 <label class="block text-xs font-bold text-gray-400 uppercase tracking-wider mb-1 ml-2">Email</label>
-                <input type="email" id="input-email" required placeholder="nume@email.com" class="w-full bg-gray-50 border-2 border-gray-100 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
+                <input type="email" id="input-email" required placeholder="nume@email.com" class="w-full bg-white border-2 border-gray-200 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
             </div>
             <div>
                 <label class="block text-xs font-bold text-gray-400 uppercase tracking-wider mb-1 ml-2">Parolă</label>
-                <input type="password" id="input-password" required placeholder="********" class="w-full bg-gray-50 border-2 border-gray-100 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
+                <input type="password" id="input-password" required placeholder="********" class="w-full bg-white border-2 border-gray-200 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
             </div>
 
             <div id="register-fields" class="space-y-4 hidden">
                 <div>
                     <label class="block text-xs font-bold text-gray-400 uppercase tracking-wider mb-1 ml-2">Numele Tău</label>
-                    <input type="text" id="input-name" placeholder="ex. Maria Popescu" class="w-full bg-gray-50 border-2 border-gray-100 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
+                    <input type="text" id="input-name" placeholder="ex. Maria Popescu" class="w-full bg-white border-2 border-gray-200 rounded-2xl px-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
                 </div>
                 <div>
                     <label class="block text-xs font-bold text-gray-400 uppercase tracking-wider mb-1 ml-2">Telefon (Pt. WhatsApp)</label>
                     <div class="relative">
                         <span class="absolute left-4 top-4 text-gray-400 font-bold">+40</span>
-                        <input type="tel" id="input-phone" placeholder="7xx xxx xxx" class="w-full bg-gray-50 border-2 border-gray-100 rounded-2xl pl-14 pr-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
+                        <input type="tel" id="input-phone" placeholder="7xx xxx xxx" class="w-full bg-white border-2 border-gray-200 rounded-2xl pl-14 pr-5 py-4 font-bold text-gray-800 focus:outline-none focus:border-brand-primary focus:bg-white transition-all">
                     </div>
                 </div>
             </div>
 
-            <button type="submit" id="auth-btn" class="w-full bg-brand-primary text-white py-4 rounded-2xl font-bold text-lg shadow-lg hover:shadow-xl hover:bg-red-400 transition-all transform active:scale-95 mt-6 flex justify-center items-center gap-2 btn-shadow">
+            <button type="submit" id="auth-btn" class="w-full bg-brand-primary text-white py-4 rounded-2xl font-bold text-lg shadow-lg hover:shadow-xl hover:bg-blue-600 transition-all transform active:scale-95 mt-6 flex justify-center items-center gap-2">
                 Intră în cont
                 <span class="material-icons-round">arrow_forward</span>
             </button>
@@ -93,11 +94,11 @@
                     <div class="w-full border-t border-gray-200"></div>
                 </div>
                 <div class="relative flex justify-center text-sm">
-                    <span class="px-2 bg-white text-gray-400">sau continuă cu</span>
+                    <span class="px-2 bg-brand-bg text-gray-400">sau continuă cu</span>
                 </div>
             </div>
 
-            <button type="button" onclick="loginWithGoogle()" class="w-full bg-white border-2 border-gray-100 text-gray-700 py-3 rounded-2xl font-bold text-base shadow-sm hover:bg-gray-50 transition-all flex justify-center items-center gap-2">
+            <button type="button" onclick="loginWithGoogle()" class="w-full bg-white border-2 border-gray-200 text-gray-700 py-3 rounded-2xl font-bold text-base shadow-sm hover:bg-gray-50 transition-all flex justify-center items-center gap-2">
                 <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5">
                 Google
             </button>
@@ -110,25 +111,17 @@
     <section id="screen-feed" class="hidden flex-col h-full relative">
         <header class="bg-white shadow-sm px-4 py-3 flex justify-between items-center z-20 sticky top-0">
             <div class="flex items-center gap-3">
-                <div class="w-10 h-10 bg-gradient-to-br from-brand-primary to-orange-400 rounded-xl flex items-center justify-center text-white shadow-md transform -rotate-3 hover:rotate-0 transition-transform">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                    </svg>
-                </div>
-                <div>
-                     <h1 class="font-extrabold text-lg text-gray-800 leading-none">Corbeanca</h1>
-                     <p class="text-[10px] font-bold text-brand-secondary uppercase tracking-widest leading-tight">Community</p>
-                </div>
+                <img src="https://placehold.co/40x40/3B82F6/FFFFFF?text=C" alt="Logo" class="w-10 h-10 rounded-lg">
             </div>
-            <div class="flex items-center gap-1">
-                <!-- Notifications Bell -->
-                <button onclick="toggleModal('modal-notifications', true)" class="p-2 relative text-gray-400 hover:text-gray-600 transition-colors">
+            <div class="flex items-center gap-2">
+                <button class="p-2 text-gray-500 hover:text-gray-700 transition-colors">
+                    <span class="material-icons-round">search</span>
+                </button>
+                <button onclick="toggleModal('modal-notifications', true)" class="p-2 relative text-gray-500 hover:text-gray-700 transition-colors">
                     <span class="material-icons-round">notifications</span>
                     <span id="notif-badge" class="hidden absolute top-1 right-1 w-2.5 h-2.5 bg-red-500 rounded-full border-2 border-white"></span>
                 </button>
-                <button onclick="window.logout()" class="p-2 text-gray-400 hover:text-red-500">
-                    <span class="material-icons-round">logout</span>
-                </button>
+                <img id="header-user-avatar" src="" class="w-9 h-9 rounded-full object-cover cursor-pointer" onclick="showScreen('profile')">
             </div>
         </header>
         <div class="flex-1 overflow-y-auto overflow-x-hidden p-4 pb-24 hide-scrollbar">
@@ -641,23 +634,23 @@
     </div>
 
     <!-- ================= BOTTOM NAVIGATION ================= -->
-    <nav id="bottom-nav" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-[0_-2px_20px_rgba(0,0,0,0.05)] py-2 px-6 rounded-t-3xl flex justify-between items-center z-40">
+    <nav id="bottom-nav" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-lg py-2 px-6 rounded-t-3xl flex justify-around items-center z-40">
         <button onclick="showScreen('feed')" id="nav-home" class="nav-btn flex flex-col items-center text-brand-primary transition-colors">
             <span class="material-icons-round text-2xl">home</span>
             <span class="text-[10px] font-bold">Acasă</span>
         </button>
-        <button class="nav-btn flex flex-col items-center text-gray-300">
+        <button onclick="showScreen('map')" id="nav-map" class="nav-btn flex flex-col items-center text-gray-400 transition-colors">
             <span class="material-icons-round text-2xl">map</span>
             <span class="text-[10px] font-bold">Hartă</span>
         </button>
-        <button onclick="toggleModal('modal-create', true)" class="bg-brand-primary text-white w-14 h-14 rounded-full -mt-8 shadow-xl border-4 border-white flex items-center justify-center fab-pulse transform hover:scale-105 transition-transform">
+        <button onclick="toggleModal('modal-create', true)" class="bg-brand-primary text-white w-14 h-14 rounded-full -mt-8 shadow-xl border-4 border-white flex items-center justify-center transform hover:scale-105 transition-transform">
             <span class="material-icons-round text-3xl">add</span>
         </button>
-        <button class="nav-btn flex flex-col items-center text-gray-300">
+        <button class="nav-btn flex flex-col items-center text-gray-400">
             <span class="material-icons-round text-2xl">chat</span>
             <span class="text-[10px] font-bold">Mesaje</span>
         </button>
-        <button onclick="showScreen('profile')" id="nav-profile" class="nav-btn flex flex-col items-center text-gray-300 transition-colors">
+        <button onclick="showScreen('profile')" id="nav-profile" class="nav-btn flex flex-col items-center text-gray-400 transition-colors">
             <span class="material-icons-round text-2xl">person</span>
             <span class="text-[10px] font-bold">Profil</span>
         </button>
