style: Update background color to #D3D8D6

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             primary: '#3B82F6', // Blue 500
                             secondary: '#10B981', // Emerald 500
                             accent: '#F59E0B', // Amber 500
-                            bg: '#F9FAFB', // Gray 50
+                            bg: '#D3D8D6', // New background color
                         }
                     },
                     keyframes: {
