--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <!-- ================= VIEW: FEED ================= -->
     <section id="screen-feed" class="hidden flex-col h-full relative">
-        <header class="bg-white shadow-sm px-4 py-3 flex justify-between items-center z-20 sticky top-0">
+        <header class="bg-[#85A89A] shadow-sm px-4 py-3 flex justify-between items-center z-20 sticky top-0">
             <div class="flex items-center gap-3">
                 <img src="https://placehold.co/40x40/3B82F6/FFFFFF?text=C" alt="Logo" class="w-10 h-10 rounded-lg">
             </div>
